feat: update User module with tests and implementation